Added title fix to style.less

--- a/less/style.less
+++ b/less/style.less
@@ -440,8 +440,9 @@ form .notes, form .hint {
                 & .dice-formula {
                     line-height: 16px;
                     &.title {
-                        height: 45px;
-                        line-height: 45px;
+                        min-height: 45px;
+                        line-height: 25px;
+                        align-items: center;
                         & img {
                             margin-right: 4px;
                         }
